--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,11 @@
 html {
   overflow-x: hidden;
   scroll-behavior: smooth;
-  scroll-padding-top: 180px;
+  scroll-padding-top: 125px;
 }
 
 body {
-  padding-top: 110px;
+  padding-top: 45px;
   background-color: lightgray;
   font-family: 'Lato', sans-serif;
 }
@@ -48,7 +48,7 @@ header {
 .logo > img {
   width: 100%;
   height: 100%;
-  max-width: 100px;
+  max-width: 65px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,7 +73,7 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 18px;
   text-decoration: none;
 }
 
@@ -90,6 +90,11 @@ li a:hover {
   width: 100%;
   min-width: 300px;
   margin-bottom: 10px;
+}
+.iframe {
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .shoes-sizes {
@@ -164,7 +169,7 @@ footer {
   text-align: center;
 }
 
-@media screen and  (max-width: 660px) {
+@media (max-width: 660px) {
   #purchase {
     flex-direction: column;
   }
@@ -177,11 +182,39 @@ footer {
   }
 }
 
-@media screen and  (max-width: 490px) {
+@media (max-width: 512px) {
   html {
-  scroll-padding-top: 228px;
+  scroll-padding-top: 129px;
 }
 body {
-  padding-top: 160px;
+  padding-top: 48px;
+}
+  .title > h1 {
+    font-size: 25px;
+  }
+  .logo > img {
+    height: 50px;
+    width: auto;
+  }
+}
+@media (max-height: 500px) {
+  html {
+  scroll-padding-top: 79px;
+}
+  body {
+  padding-top: 0px;
+}
+  .logo {
+    height: 50px;
+  }
+  .title > h1 {
+    font-size: 25px;
+  }
+  .logo > img {
+    height: 55px;
+    width: auto;
+  }
+  li a {
+  padding: 5px 10px;
 }
 }
